# weatherstation

./: Makefile.am  configure.ac
source/weatherstation/: Makefile.am  weatherstation.c
